--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!--build:css css/styles.min.css-->
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<!--endbuild-->
 		<!--build:js js/main.min.js -->
 		<script src="./js/main.js"></script>
 		<script src="./js/menu.js"></script>
