--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
 		<!--build:css css/styles.min.css-->
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/typography.css">
 		<!--endbuild-->
 		<!--build:js js/main.min.js -->
 		<script src="./js/main.js"></script>
@@ -11,10 +13,10 @@
 		<Title> Test Site </Title>
 	</head>
 	<body>
-
-		<h1>My First Heading</h1>
-
-		<p>My first paragraph.</p>
+      <section>
+        <img src="images/naples.jpg" alt="A picure of Naples.">
+        <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
+      </section>
 
 	</body>
 </html>
