--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,16 @@
 		<Title> Test Site </Title>
 	</head>
 	<body>
-      <section>
-        <img src="images/naples.jpg" alt="A picure of Naples.">
-        <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
-      </section>
+	<nav class="navigation_menu">
+		<ul>
+			<li><a onclick="load('home')" class="active" href="#home">Home</a></li>
+			<li><a onclick="load('innerHtml')" href="#innerHtml">innerHtml</a></li>
+			<li><a href="#DOM">DOM</a></li>
+			<li><a href="#funzioni">Funzioni</a></li>
+		</ul>
+	</nav>
+      <section id="main_content">
 
+      </section>
 	</body>
 </html>
