FEATURES-1 Munu - path assoluto per img

--- a/app/pages/innerHtml.html
+++ b/app/pages/innerHtml.html
@@ -1,2 +1,2 @@
-<img src="../images/naples.jpg" alt="A picure of Naples." id="img_main">
+<img src="images/naples.jpg" alt="A picure of Naples." id="img_main">
 <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
