FEATURES-1 Esempi js - ultime modifiche per test e lezioni.

--- a/app/index.html
+++ b/app/index.html
@@ -7,22 +7,25 @@
 		<link rel="stylesheet" type="text/css" href="./css/typography.css">
 		<!--endbuild-->
 		<!--build:js js/main.min.js -->
-		<script src="./js/main.js"></script>
 		<script src="./js/menu.js"></script>
+		<script src="./js/main.js"></script>
 		<!-- endbuild -->
-		<Title> Test Site </Title>
+		<Title> Corso js Site </Title>
 	</head>
 	<body>
 	<nav class="navigation_menu">
 		<ul>
 			<li><a onclick="load('home')" class="active" href="#home">Home</a></li>
-			<li><a onclick="load('innerHtml')" href="#innerHtml">innerHtml</a></li>
-			<li><a href="#DOM">DOM</a></li>
-			<li><a href="#funzioni">Funzioni</a></li>
+			<li><a onclick="load('dom')"  href="#DOM">DOM</a></li>
+			<li><a onclick="load('funzioni')" href="#funzioni">Funzioni</a></li>
+			<li><a onclick="load('innerHtml')" href="#innerHtml">Esempi ed Esercizi</a></li>
 		</ul>
 	</nav>
       <section id="main_content">
 
       </section>
+	  <section id="listener__examples">
+
+	  </section>
 	</body>
 </html>
