--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,4 +1,8 @@
 <div>
-    <p> Corso di javascript per la gestione del DOM. </p>
-    <p> Cliccare sulle varie sezioni per visualizzare i vari esempi. </p>
+    <h1> Corso di javascript per la gestione del DOM. </h1>
+    <p> Cliccare sulle varie voci di menu per visualizzare i vari esempi. </p>
+    <p><h2> Programma: </h2></p>
+    <li> DOM: definizione ed utilizzo </li>
+    <li> Funzioni in JS </li>
+    <li> DOM: esercizi ed esempi </li>
 </div>
