--- a/app/pages/innerHtml.html
+++ b/app/pages/innerHtml.html
@@ -1,2 +1,7 @@
+<h1>Esempi ed Esercizi</h1>
+<p> Inner html tramite le funzioni presenti in menu.js</p>
 <img src="images/naples.jpg" alt="A picure of Naples." id="img_main">
 <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
+<div onclick="fn()" class="button__example">
+    Location Example
+</div>
