botton under slider

--- a/app/pages/other.html
+++ b/app/pages/other.html
@@ -70,6 +70,13 @@
                 Naples 3
             </div>
         </div>
+        
+        
+        <div class="cl_container">
+				<div class="active" id="cl_im_1"></div>
+				<div  class="not-active" id="cl_im_2"></div>
+				<div class="not-active" id="cl_im_3"> </div>
+        </div>
 
         <div class="navButton" id="previous">&#10094;</div>
         <div class="navButton" id="next">&#10095;</div>
